--- a/package.json
+++ b/package.json
@@ -15,8 +15,13 @@
   },
   "devDependencies": {
     "@types/react": "17.0.16",
-    "eslint": "7.32.0",
+    "@typescript-eslint/eslint-plugin": "^4.29.0",
+    "@typescript-eslint/parser": "^4.29.0",
+    "autoprefixer": "^10.3.1",
+    "eslint": "^7.32.0",
     "eslint-config-next": "11.0.1",
+    "postcss": "^8.3.6",
+    "tailwindcss": "^2.2.7",
     "typescript": "4.3.5"
   }
 }
