Make docker build work, this time for sure

--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -26,5 +26,5 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: pangio:latest,ghcr.io/giopan04/pangio:latest
+          tags: ghcr.io/giopan04/pangio:latest
     
