--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@tailwindcss/aspect-ratio": "^0.2.1",
+    "@types/marked": "^2.0.4",
+    "marked": "^3.0.0",
     "next": "11.1.0",
     "octokit": "^1.4.0",
     "react": "17.0.2",
