--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/aspect-ratio": "^0.2.1",
     "@types/marked": "^2.0.4",
+    "date-fns": "^2.23.0",
     "marked": "^3.0.0",
     "next": "11.1.0",
     "octokit": "^1.4.0",
