--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@animxyz/core": "^0.6.4",
+    "@animxyz/react": "^0.6.4",
     "@tailwindcss/aspect-ratio": "^0.2.1",
     "@types/body-scroll-lock": "^3.1.0",
     "body-scroll-lock": "^4.0.0-beta.0",
