--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
   "dependencies": {
     "@types/body-scroll-lock": "^3.1.0",
     "body-scroll-lock": "^4.0.0-beta.0",
-    "next": "11.1.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "next": "12",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-feather": "^2.0.9",
     "react-intersection-observer": "^8.32.0",
     "sass": "^1.37.5"
   },
   "devDependencies": {
-    "@types/react": "17.0.16",
+    "@types/react": "^17.0.38",
     "@typescript-eslint/eslint-plugin": "^4.29.0",
     "@typescript-eslint/parser": "^4.29.0",
     "autoprefixer": "^10.4.2",
